prepare_base_model added

--- a/params.yaml
+++ b/params.yaml
@@ -1,1 +1,8 @@
-key : value
+AUGMENTATION: True
+IMAGE_SIZE: [224,224,3]
+BATCH_SIZE: 16 #smaller batch size for local training
+INCLUDE_TOP: False
+EPOCHS: 1
+CLASSES: 2 #normal kidney, tumor
+WEIGHTS: imagenet
+LEARNING_RATE: 0.01 #for optimizerr
